vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:    
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: vault-ingress
  namespace: vault
spec:
  rules:
  - host: vault.binesty.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-1687812686
            port:
              number: 8200
